Fixe daily missions not checking if it was yesterday on set mission Started work on stabbing CMI as the chat provider and use our own inbuilt one using MiniMessages to allow for a fuck ton more cusotmizations. Updated a bunch of commands to Text Components. Added LuckPerms and MiniPlaceholders depenencies. Purchases are now page based. Bunch of code optimizations. More stuff probably.